--- a/exercises/02-recepe-page-code-exercice/index.html
+++ b/exercises/02-recepe-page-code-exercice/index.html
@@ -26,7 +26,8 @@
 
         <b>PREP TIME:</b> 2 HOURS 30 MINUTES
         
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
         <b>COOK TIME:</b> 30 MINUTES
         
