--- a/exercises/03-adventure/index.html
+++ b/exercises/03-adventure/index.html
@@ -21,7 +21,8 @@
         <img
             src="images/Balenciaga Spring 22 Invitation.jpg"
             height="400"
-        >
+            alt="invitation-card"
+            >
 
         <ul>
             <li>
@@ -38,7 +39,6 @@
                 </a>  
             </li>
         </ul>
-
 
     </body>
 </html>
