--- a/exercises/03-adventure/page-1.html
+++ b/exercises/03-adventure/page-1.html
@@ -21,12 +21,21 @@
         <img
             src="images/Balenciaga Official Online Boutique US.jpg"
             height="400"
+            alt="man standing behind the courtain of a balenciaga's runway"
         >
 
         <ul>
             <li>
                 <a href="page-3.html">
-                Peek at the designer’s sketchbook
+                    Peek at the designer’s sketchbook
+                </a>
+            </li>
+        </ul>
+
+        <ul>
+            <li>
+                <a href="page-6.html">
+                    Accept the outfit and step into the role of muse 
                 </a>
             </li>
         </ul>
