--- a/exercises/03-adventure/page-2.html
+++ b/exercises/03-adventure/page-2.html
@@ -21,12 +21,21 @@
         <img
             src="images/Balenciaga FALL 22.jpg"
             height="400"
-        >
+            alt="model in a fashion runway"
+            >
 
         <ul>
             <li>
                 <a href="page-4.html">
                     Try on a half-finished couture piece left on a rack
+                </a>
+            </li>
+        </ul>
+
+        <ul>
+            <li>
+                <a href="page-5.html">
+                    Embrace it and walk the runway
                 </a>
             </li>
         </ul>
