--- a/exercises/03-adventure/page-3.html
+++ b/exercises/03-adventure/page-3.html
@@ -20,14 +20,7 @@
         <img
             src="images/Unknown-23.jpg"
             height="400"
+            alt="models sketches"
         >
-
-        <ul>
-            <li>
-                <a href="page-6.html">
-                Accept the outfit and step into the role of muse 
-                </a>
-            </li>
-        </ul>
     </body>
 </html>
