--- a/exercises/03-adventure/page-4.html
+++ b/exercises/03-adventure/page-4.html
@@ -21,15 +21,8 @@
         <img
             src="images/🤍@kacie.jpg"
             height="400"
-        >
-
-        <ul>
-            <li>
-                <a href="page-5.html">
-                Embrace it and walk the runway
-                </a>
-            </li>
-        </ul>
-                       
+            alt="fashion studio with clothes on hangers, a mannequin, and 
+            fabric on a work table"
+        >             
     </body>
 </html>
