--- a/exercises/03-adventure/page-5.html
+++ b/exercises/03-adventure/page-5.html
@@ -22,6 +22,8 @@
         <img
             src="images/Balenciaga Resort 2025….jpg"
             height="400"
+            alt="person in oversized coat, hoodie, and plataform boots 
+            walking on a runway"
         >
     </body>
 </html>
