--- a/exercises/03-adventure/page-6.html
+++ b/exercises/03-adventure/page-6.html
@@ -14,7 +14,7 @@
             The runway comes alive with movement. Models storm forward in 
             heavy fabrics, futuristic silhouettes, and exaggerated shapes. 
             Screens project images of collapsing cities and rising oceans, 
-            the collection a reflection of chaos and resilience. The crowd is 
+            the collectxion a reflection of chaos and resilience. The crowd is 
             silent, entranced. You realize you are merely a spectator—or 
             perhaps you could change that.
         </p>
@@ -22,8 +22,8 @@
         <img
             src="images/Balenciaga Fall 2024…-2.jpg"
             height="400"
-        >
-
-
+            alt="model in dark hoodie and baggy pants walking runway with 
+            neon background"
+            >
     </body>
 </html>
