--- a/projects/02-html-potluck/movie-showcase.html
+++ b/projects/02-html-potluck/movie-showcase.html
@@ -22,7 +22,7 @@
 
         <hr>
 
-        <a href="#1">
+        <a href="#movie1">
             <img
                 src="images/Fight Club (1999).jpg"
                 height="400"
@@ -30,7 +30,7 @@
             >
         </a>
 
-        <a href="#2">
+        <a href="#movie2">
             <img
                 src="images/Unknown-40.jpg"
                 height="400"
@@ -38,7 +38,7 @@
             >
         </a>
 
-        <a href="#3">
+        <a href="#movie3">
             <img
                 src="images/Unknown-42.jpg"
                 height="400"
@@ -49,7 +49,7 @@
         <hr>
         <br>
 
-        <h3 id="1"> 
+        <h3 id="movie1"> 
             Fight Club
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -64,6 +64,7 @@
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;
             <a href="#top">
                 <i class="fa-solid fa-xmark"></i>
             </a>
@@ -134,7 +135,7 @@
         <br>
         <br>
 
-        <h3 id="2"> 
+        <h3 id="movie2"> 
             Edward Scissorhands
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -147,7 +148,7 @@
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            &nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;
             <a href="#top">
                 <i class="fa-solid fa-xmark"></i>
             </a>
@@ -157,7 +158,6 @@
         <img
             src="images/Edward Scissorhands (1990).jpg"
             width="870"
-            height="550"
             alt="Edward Scissorhandsstanding beside kim"    
         >
 
@@ -217,7 +217,7 @@
         <br>
         <br>
 
-        <h3 id="3"> 
+        <h3 id="movie3"> 
             The Truman Show
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -230,7 +230,8 @@
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            
             <a href="#top">
                 <i class="fa-solid fa-xmark"></i>
             </a>
@@ -240,7 +241,6 @@
         <img
             src="images/Truman Show.jpg"
             width="870"
-            height="550"
             alt="Truman walking through a door into the real world"    
         >
 
