--- a/projects/02-html-potluck/index.html
+++ b/projects/02-html-potluck/index.html
@@ -8,5 +8,20 @@
     </head>
     <body>
         
+        Visit
+        <a href="cookbook.html">cookbook page</a>
+
+        <hr>
+        
+        Visit
+        <a href="movie-showcase.html">movie-showcase page</a>
+
+        <hr>
+
+        Visit
+        <a href="playlists.html">playlists page</a>
+
+        <hr>
+
     </body>
 </html>
