--- a/exercises/07-10-trials/index.html
+++ b/exercises/07-10-trials/index.html
@@ -18,6 +18,8 @@
             quam rem odit.
         </p>
 
+        <br>
+
         <h2>
             Trial #2
         </h2>
@@ -34,6 +36,8 @@
             Impedit ab sapiente sequi 
             quam rem odit.
         </p>
+
+        <br>
 
         <h2>
             Trial #3
@@ -52,6 +56,8 @@
             </span>
         </p>
 
+        <br>
+
         <h2>
             Trial #4
         </h2>
@@ -61,6 +67,8 @@
             nam error, repellat eaque est omnis! Impedit ab sapiente sequi 
             quam rem odit.
         </p>
+
+        <br>
 
         <h2>
             Trial #5
@@ -75,6 +83,8 @@
             nam error, repellat eaque est omnis! Impedit ab sapiente sequi 
             quam rem odit.
         </p>
+
+        <br>
 
         <h2>
             Trial #6
@@ -91,6 +101,8 @@
             </span>
             sequi quam rem odit.
         </p>
+
+        <br>
 
         <h2>
             Trial #7
@@ -112,6 +124,8 @@
             quam rem odit.
         </p>
 
+        <br>
+
         <h2>
             Trial #8
         </h2>
@@ -129,6 +143,8 @@
             quam rem odit.
         </p>
 
+        <br>
+
         <h2>
             Trial #9
         </h2>
@@ -143,13 +159,17 @@
             nam error, repellat eaque est omnis! Impedit ab sapiente sequi 
             quam rem odit.
         </p>
+        
+        <br>
 
-        <div 
-        <span id="span-15"> EYEBROW</span>
+        <h2>
+            Trial #10
+        </h2>
+        <div id="div-1"> EYEBROW</div>
         <br>
-        <span id="span-16"> Fake Heading</span>
+        <div id="div-2"> Fake Heading</div>
         <br>
-        <span id="span-17"> Fake Subheading</span>
+        <div id="div-3"> Fake Subheading</div>
 
 
     </body>
