--- a/projects/03-bulletin-board/index.html
+++ b/projects/03-bulletin-board/index.html
@@ -14,7 +14,7 @@
                 <h3>
                     Rent due tomorrow!
                 </h3>
-                <h3>Doctor's appt at 3pm
+                <h3>Doctor's appt at 3pm</h3>
             </div>
             
             <div class="post-it yellow">
@@ -53,7 +53,7 @@
             </div>
 
             <div class="post-it pink">
-                <h2>Don't eat my snacks<h2>
+                <h2>Don't eat my snacks</h2>
             </div>
         
         </div>
