--- a/exercises/10-box-framing/index.html
+++ b/exercises/10-box-framing/index.html
@@ -9,7 +9,11 @@
     <body>
         
         <div>
-            <img id="image" src="images/building-9340309_640.jpg" alt="Buildings">
+            <img 
+                id="image" 
+                src="images/building-9340309_640.jpg" 
+                alt="Buildings"
+            >
         </div>
 
         <div>
