--- a/projects/05-product-showcase-site/index.html
+++ b/projects/05-product-showcase-site/index.html
@@ -3,10 +3,28 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Product Showcase Project</title>
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        
+        <div class="background-color">
+            <div class="content">
+                <img src="images/848955T00639980_F.jpg.avif" alt="perfume">
+                <h3 class="text-overlay">BALENCIAGA</h3>
+                <h3>FRAGANCES</h3>
+                <p>
+                    Step into the world of Balenciaga scents where 
+                    timeless elegance meets bold innovation. Each 
+                    fragrance is crafted as an extension of the 
+                    brand’s vision: distinctive, sophisticated, and 
+                    unforgettable. From delicate floral notes to deep, 
+                    daring blends, our perfumes capture moods, moments, 
+                    and identities. More than just a scent, each bottle 
+                    is a statement of style and individuality.
+                </p>
+                <a href="#" class="button shop">SHOP NOW</a>
+                <a href="#" class="button">DISCOVER MORE</a>
+            </div>
+        </div>
     </body>
 </html>
