--- a/projects/05-product-showcase-site/index.html
+++ b/projects/05-product-showcase-site/index.html
@@ -8,8 +8,11 @@
     </head>
     <body>
         <div class="background-color">
-            <div class="content">
-                <img src="images/848955T00639980_F.jpg.avif" alt="perfume">
+            <div class="content-1">
+                <img 
+                    src="images/848955T00639980_F.jpg.avif" 
+                    alt="perfume"
+                >
                 <h3 class="text-overlay">BALENCIAGA</h3>
                 <h3>FRAGANCES</h3>
                 <p>
@@ -24,6 +27,40 @@
                 </p>
                 <a href="#" class="button shop">SHOP NOW</a>
                 <a href="#" class="button">DISCOVER MORE</a>
+            </div>
+            <div class="content-2">
+                <img 
+                    src="images/Thumbnail-833592WBEQ11000_X.jpg.avif" 
+                    alt="boot"
+                >
+                <h3 class="text-overlay">BALENCIAGA</h3>
+                <h3>BOOTS</h3>
+                <p>
+                    Balenciaga boots redefine contemporary style with 
+                    bold silhouettes and uncompromising craftsmanship. 
+                    From sharp designs to oversized statements, 
+                    each pair is built to challenge conventions while 
+                    embodying effortless elegance. Crafted with precision 
+                    and attitude, these boots are not just footwear, 
+                    they’re icons of individuality.
+                </p>
+                <a href="#" class="button shop-man">SHOP MAN</a>
+                <a href="#" class="button">SHOP WOMAN</a>
+            </div>
+            <div class="content-3">
+                <img 
+                    src="images/HP_DK_SP25_STILL_LIFES_2600x1300_2x1_23.jpg.avif" 
+                    alt="boot"
+                >
+                <h3 class="text-overlay">BALENCIAGA</h3>
+                <h3>BAGS</h3>
+                <p>
+                    Balenciaga bags combine modern design with timeless 
+                    edge. Iconic shapes, bold details, and refined 
+                    craftsmanship make each piece a statement of style,
+                    made to be carried everywhere, noticed anywhere.
+                </p>
+                <a href="#" class="button shop bags">SHOP NOW</a>
             </div>
         </div>
     </body>
