--- a/exercises/13-blog-post/index.html
+++ b/exercises/13-blog-post/index.html
@@ -12,7 +12,9 @@
                 <h3>Pets & Lifestyle</h3>
                 <h1>Why Cats Knock Things Over: A Peek Into Feline Logic</h1>
                 <h3>By Jordan Rivera - September 10,2025</h3>
-                <img src="images/_.jpg">
+                <img src="images/Unknown-30.jpg"
+                    alt="cat sleeping"
+                >
                 <p>
                     Cats have a reputation for being graceful, intelligent, 
                     and—let’s be honest—a little mischievous. If you live 
@@ -30,7 +32,9 @@
                     quae voluptatem quasi! Et possimus quam dolorum, 
                     perspiciatis molestias reprehenderit?
                 </p>
-                <img src="images/Belly-Clutchingly Hissterically Relatable Cat Memes For Cat Owners And Cats Alike.jpg">
+                <img src="images/Belly-Clutchingly Hissterically Relatable Cat Memes For Cat Owners And Cats Alike.jpg"
+                    alt="cat on a piece of paper"
+                >
                 <h2>Instinct at Play</h2>
                 <p>
                     Cats are natural hunters. In the wild, small 
@@ -58,7 +62,9 @@
                     A pen rolling across the floor? In their mind, t
                     hat’s prey in motion.
                 </p>
-                <img src="images/Shargia Alieva | Just a chill girl 📷….jpg">
+                <img src="images/Shargia Alieva | Just a chill girl 📷….jpg"
+                    alt="cat drinking juice"
+                >
             </div>
         </div>
     </body>
