--- a/projects/05-product-showcase-site/index.html
+++ b/projects/05-product-showcase-site/index.html
@@ -7,7 +7,7 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <div class="background-color">
+        <div class="background-color-1">
             <div class="content-1">
                 <img 
                     src="images/848955T00639980_F.jpg.avif" 
@@ -28,6 +28,8 @@
                 <a href="#" class="button shop">SHOP NOW</a>
                 <a href="#" class="button">DISCOVER MORE</a>
             </div>
+        </div>
+        <div class="background-color-2">
             <div class="content-2">
                 <img 
                     src="images/Thumbnail-833592WBEQ11000_X.jpg.avif" 
@@ -47,6 +49,8 @@
                 <a href="#" class="button shop-man">SHOP MAN</a>
                 <a href="#" class="button">SHOP WOMAN</a>
             </div>
+        </div>
+        <div class="background-color-1"> 
             <div class="content-3">
                 <img 
                     src="images/HP_DK_SP25_STILL_LIFES_2600x1300_2x1_23.jpg.avif" 
