--- a/exercises/14-three-profile-cards/index.html
+++ b/exercises/14-three-profile-cards/index.html
@@ -3,10 +3,57 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Three Cards Exercise</title>
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
         
+        <div id="single-column">
+
+            <div id="card-container">
+
+                <div class="card">
+                    <h3>Biscuit</h3>
+                    <img 
+                        src="images/istockphoto-1185437742-612x612.jpg"
+                        alt="cat"
+                    >
+                    <p>
+                        I named him Biscuit because when he was a kitten, 
+                        he kept kneading everything like he was baking dough. 
+                        Felt perfect.
+                    </p>
+                    <a href="#">VISIT</a>
+                </div>
+
+                <div class="card">
+                    <h3>Chairman Meow</h3>
+                    <img 
+                        src="images/istockphoto-470752080-612x612.jpg"
+                        alt="cat"
+                    >
+                    <p>
+                        He acts like he owns the house and rules over 
+                        everyone, so Chairman Meow just fit too well.
+                    </p>
+                    <a href="#">VISIT</a>
+                </div>
+
+                <div class="card">
+                    <h3>Waffles</h3>
+                    <img 
+                        src="images/istockphoto-538195658-612x612.jpg"
+                        alt="cat"
+                    >
+                    <p>
+                        She’s Waffles because she’s soft, warm, and you 
+                        just want to squish her like comfort food.
+                    </p>
+                    <a href="#">VISIT</a>
+                </div>
+
+            </div>
+
+        </div>
     </body>
 </html>
