--- a/exercises/15-side-by-side-recipe/index.html
+++ b/exercises/15-side-by-side-recipe/index.html
@@ -19,7 +19,7 @@
                     >
                 </div>
                 <div class="content">
-                    <p>DESSERT</P>
+                    <p>DESSERT</p>
                     <h2>BROWN SUGAR CINNAMON POP-TART COPYCAT</h2>
 
                     <p>
