--- a/exercises/16-site-scaffolding/index.html
+++ b/exercises/16-site-scaffolding/index.html
@@ -9,7 +9,7 @@
     <body>
         
         <div id="navbar">
-            <h1 id="logo-container"><a href="homepage.html">AngelEars</a></h1>
+            <h1 id="logo-container"><a href="index.html">AngelEars</a></h1>
             <a href="news.html">News</a>
             <a href="editorials.html">Editorials</a>
             <a href="media.html">Media</a>
