--- a/exercises/17-blog-with-sidebar/index.html
+++ b/exercises/17-blog-with-sidebar/index.html
@@ -13,7 +13,7 @@
                 <h1>Why Cats Knock Things Over: A Peek Into Feline Logic</h1>
                 <h3>By Jordan Rivera - September 10,2025</h3>
                 <img 
-                    src="images/Unknown-30.jpg"
+                src="images/Unknown-30.jpg"
                     alt="cat sleeping"
                 >
                 <p>
@@ -73,16 +73,24 @@
             <div class="sidebar-content">
                 <h2>You Might Also Like</h2>
                 <ul>
-                    <li>The Secret Language of Cat Tails</li>
-                    <li>Why Do Cats Knock Things Over?</li>
-                    <li>Understanding Cat Purring: More Than Happiness</li>
-                    <li>How to Calm a Stressed Cat</li>
+                    <li>
+                        <a href="#">The Secret Language of Cat Tails</a>
+                    </li>
+                    <li>
+                        <a href="#"> Why Do Cats Knock Things Over?</a>
+                    </li>
+                    <li>
+                        <a href="#">Understanding Cat Purring: More Than Happiness</a>
+                    </li>
+                    <li>
+                        <a href="#">How to Calm a Stressed Cat</a>
+                    </li>
                 </ul>
                 <h2>Explore by Topic</h2>
                 <ul>
-                    <li>Cat Behavior</li>
-                    <li>Health & Care</li>
-                    <li>Fun & Lifestyle</li>
+                    <li><a href="#">Cat Behavior</a></li>
+                    <li><a href="#">Health & Care</a></li>
+                    <li><a href="#">Fun & Lifestyle</a></li>
                 </ul>
             </div>
         </div>
