--- a/exercises/15-side-by-side-recipe/index.html
+++ b/exercises/15-side-by-side-recipe/index.html
@@ -9,7 +9,7 @@
     <body>
         
         <br>
-        <div id="sinlge-column-layout">
+        <div id="single-column-layout">
 
             <div id="recipe-intro">
                 <div class="image">
