--- a/exercises/16-site-scaffolding/news.html
+++ b/exercises/16-site-scaffolding/news.html
@@ -8,11 +8,11 @@
     </head>
     <body>
         <div id="navbar">
-            <h1 id="logo-container"><a href="homepage.html">AngelEars</a></h1>
+            <h1 id="logo-container"><a href="index.html">AngelEars</a></h1>
             <a href="news.html">News</a>
             <a href="editorials.html">Editorials</a>
             <a href="media.html">Media</a>
-            <a href="buttom" class="button">SUBSCRIBE NOW</a>
+            <a href="subscribe-now.html" class="button">SUBSCRIBE NOW</a>
         </div>
         <h1 class="title">News Page</h1>
     </body>
