--- a/exercises/16-site-scaffolding/subscribe-now.html
+++ b/exercises/16-site-scaffolding/subscribe-now.html
@@ -15,6 +15,6 @@
             <a href="media.html">Media</a>
             <a href="subscribe-now.html" class="button">SUBSCRIBE NOW</a>
         </div>
-        <h1 class="title">Home Page</h1>
+        <h1 class="title">Subscribed</h1>
     </body>
 </html>
