--- a/projects/06-mebay-product-page/index.html
+++ b/projects/06-mebay-product-page/index.html
@@ -19,7 +19,7 @@
             </div>
 
             <div id="featured-image-column">
-                <h6 class="heading">25 VIEWED IN THE LAST 24 HOURS<h6>
+                <h6 class="heading">25 VIEWED IN THE LAST 24 HOURS</h6>
                 <img src="images/featured.jpg" alt="bag">
             </div>
 
