--- a/personal/personal-website/index.html
+++ b/personal/personal-website/index.html
@@ -6,25 +6,32 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Personal Website</title>
         <link href="css/style.css" rel="stylesheet">
+        <link 
+            rel="stylesheet" 
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" 
+            integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" 
+            crossorigin="anonymous" 
+            referrerpolicy="no-referrer"
+        >
     </head>
     <body>
         
         <!-- HEADER -->
         <div id="header">
             <div class="nav-left">
-                <a href="#">MENU</a>
-                <a href="#">SEARCH</a>
+                <a href="#" class="button"><i class="fa-regular fa-bars"></i></a>
+                <a href="#" class="button"><i class="fa-regular fa-magnifying-glass"></i></a>
             </div>
             <h1>caractère</h1>
             <div class="nav-right">
-                <a href="#">SAVED</a>
-                <a href="#">CART</a>
+                <a href="#" class="button"><i class="fa-regular fa-bookmark"></i></a>
+                <a href="#" class="button"><i class="fa-regular fa-cart-shopping"></i></a>
             </div>
         </div>
          
         <!-- PRODUCT GRID -->
         <div class="product-grid">
-            <!-- PRODUCT ITEM -->
+            <!-- PRODUCT ITEMS -->
             <div class="product">
                 <img src="images/IMG_6346 2.jpg" alt="jacket">
                 <h3>BOXY JACKET</h3>
@@ -32,7 +39,19 @@
             </div>
 
             <div class="product">
-                <img src="images/Untitled_Artwork 5.jpg" alt="jacket">
+                <img src="images/Untitled_Artwork 5.jpg" alt="jeans">
+                <h3>ZIP-JEANS</h3>
+                <p>$2150</p>
+            </div>
+
+            <div class="product">
+                <img src="images/IMG_6346 2.jpg" alt="jacket">
+                <h3>BOXY JACKET</h3>
+                <p>$1660</p>
+            </div>
+
+            <div class="product">
+                <img src="images/Untitled_Artwork 5.jpg" alt="jeans">
                 <h3>ZIP-JEANS</h3>
                 <p>$2150</p>
             </div>
