--- a/personal/personal-website/index.html
+++ b/personal/personal-website/index.html
@@ -22,7 +22,7 @@
                 <a href="#" class="button"><i class="fa-regular fa-bars"></i></a>
                 <a href="#" class="button"><i class="fa-regular fa-magnifying-glass"></i></a>
             </div>
-            <h2>caractère</h2>
+            <h2>Caractère</h2>
             <div class="nav-right">
                 <a href="#" class="button"><i class="fa-regular fa-bookmark"></i></a>
                 <a href="#" class="button"><i class="fa-regular fa-cart-shopping"></i></a>
@@ -35,25 +35,25 @@
             <div class="product">
                 <img src="images/IMG_6346 2.jpg" alt="jacket">
                 <h3>BOXY JACKET</h3>
-                <p>$1660</p>
+                <p>$ 1660</p>
             </div>
 
             <div class="product">
                 <img src="images/Untitled_Artwork 5.jpg" alt="jeans">
                 <h3>ZIP-JEANS</h3>
-                <p>$2150</p>
+                <p>$ 2150</p>
             </div>
 
             <div class="product">
                 <img src="images/IMG_6346 2.jpg" alt="jacket">
                 <h3>BOXY JACKET</h3>
-                <p>$1660</p>
+                <p>$ 1660</p>
             </div>
 
             <div class="product">
                 <img src="images/Untitled_Artwork 5.jpg" alt="jeans">
                 <h3>ZIP-JEANS</h3>
-                <p>$2150</p>
+                <p>$ 2150</p>
             </div>
         </div>
     </body>
