--- a/projects/07-final-eval/index.html
+++ b/projects/07-final-eval/index.html
@@ -10,7 +10,7 @@
         <div id="single-column-layout">
             <h4>John and Jane Smith's</h4>
             <h1>Super Bowl LVIII</h1>
-            <h3>Extravaganza Party<h3>
+            <h3>Extravaganza Party</h3>
 
             <div class="card-container">
                 <div class="card">
@@ -18,7 +18,7 @@
                         src="images/dallas-cowboys-team-stars-11-round-metal-sign_ss5_p-202133102+pv-1+u-agtypkou7sjibrt0f8nn+v-w7jnxtrwo68xltva6vxq.jpg.avif"
                         alt="futbol-team"
                     >
-                    <h3>Dallas Cowboys<h3>
+                    <h3>Dallas Cowboys</h3>
                 </div>
                 <h3>VS</h3>
                 <div class="card">
@@ -26,7 +26,7 @@
                         src="images/black-imperial-wall-signs-imp-584-1011-64_600.jpg.avif"
                         alt="futbol-team"
                     >
-                    <h3>Patriots<h3>
+                    <h3>Patriots</h3>
                 </div>
             </div>
             
@@ -43,7 +43,7 @@
                 <a href="#">I can't make it!</a>
             </div>
 
-            <h5>Questions? Call 555.123.4567<h5>
+            <h5>Questions? Call 555.123.4567</h5>
         </div>
     </body>
 </html>
