--- a/exercises/19-themed-gallery-page/index.html
+++ b/exercises/19-themed-gallery-page/index.html
@@ -3,10 +3,55 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Themed Gallery Page Exercise</title>
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        
+        <div id="hero">
+            <div class=hero-content>
+                <h1>Inspired by the Past, <br>Designed for Now</h1>
+            </div>
+        </div>
+
+        <div class="gallery-layout">
+            <div class="gallery-content">
+                <img 
+                    src="images/istockphoto-675612328-612x612.jpg" 
+                    alt="vintage-photo"
+                >
+                <img 
+                    src="images/istockphoto-1294986053-612x612.jpg" 
+                    alt="vintage-photo"
+                >
+                <img 
+                    src="images/istockphoto-1298417443-612x612.jpg" 
+                    alt="vintage-photo"
+                >
+                <img 
+                    src="images/istockphoto-1432462858-612x612.jpg" 
+                    alt="vintage-photo"
+                >
+                <img 
+                    src="images/istockphoto-1458877007-612x612.jpg" 
+                    alt="vintage-photo"
+                >
+                <img 
+                    src="images/istockphoto-163021300-612x612.jpg" 
+                    alt="vintage-photo"
+                >
+                <img 
+                    src="images/istockphoto-164644457-612x612.jpg" 
+                    alt="vintage-photo"
+                >
+                <img 
+                    src="images/istockphoto-2043190693-612x612.jpg" 
+                    alt="vintage-photo"
+                >
+                <img 
+                    src="images/istockphoto-57539309-612x612.jpg" 
+                    alt="vintage-photo"
+                >
+            </div>
+        </div>
     </body>
 </html>
