--- a/projects/08-portfolio/index.html
+++ b/projects/08-portfolio/index.html
@@ -38,7 +38,7 @@
                 <img src="images/urban-11n8m.jpg" alt="dark hallway">
                 <img src="images/urban-9mb73.jpg" alt="dark hallway">
                 <img src="images/urban-8zu9s.jpg" alt="hallway">
-                <img src="images/urban-5sn81.jpg" alt="street with falling snow">
+                <img src="images/urban-5sn81.jpg" alt="street falling snow">
                 <img src="images/urban-2b3sc.jpg" alt="chinatown street">
             </div>
         </div>
@@ -52,7 +52,8 @@
                     storytelling. My goal is to turn simple scenes 
                     into timeless images.
                 </p>
-                <a href="#">Learn More
+                <a href="#">
+                    Learn More
                     <i class="fa-duotone fa-solid fa-arrow-right"></i>
                 </a>
             </div>
@@ -64,7 +65,8 @@
                     I work closely with each client to craft unique images 
                     that reflect their vision.
                 </p>
-                <a href="#">View Rates
+                <a href="#">
+                    View Rates
                     <i class="fa-duotone fa-solid fa-arrow-right"></i>
                 </a>
             </div>
@@ -76,7 +78,8 @@
                     session or ask any questions—I’d love to hear from you.
 
                 </p>
-                <a href="#">Reach Out
+                <a href="#">
+                    Reach Out
                     <i class="fa-duotone fa-solid fa-arrow-right"></i>
                 </a>
             </div>
