--- a/personal/personal-website/index.html
+++ b/personal/personal-website/index.html
@@ -33,61 +33,70 @@
         <div class="product-grid">
             <!-- PRODUCT ITEMS -->
             <div class="product">
-                <i class="fa-regular fa-bookmark"></i>
+                <a href="#" class="button"><i class="fa-regular fa-bookmark"></i></a>
+                <img src="images/Artboard 1.png" alt="jacket">
+                <h3>BOXY JACKET</h3>
+                <p>$ 1660</p>
+            </div>
+
+            <div class="product">
+                <a href="#" class="button"><i class="fa-regular fa-bookmark"></i></a>
+                <img src="images/Artboard 2.png" alt="jeans">
+                <h3>ZIP-JEANS</h3>
+                <p>$ 2150</p>
+            </div>
+
+            <div class="product">
+                <a href="#" class="button"><i class="fa-regular fa-bookmark"></i></a>
                 <img src="images/IMG_6346 2.jpg" alt="jacket">
                 <h3>BOXY JACKET</h3>
                 <p>$ 1660</p>
             </div>
 
             <div class="product">
+                <a href="#" class="button"><i class="fa-regular fa-bookmark"></i></a>
                 <img src="images/Untitled_Artwork 5.jpg" alt="jeans">
                 <h3>ZIP-JEANS</h3>
                 <p>$ 2150</p>
             </div>
 
             <div class="product">
+                <a href="#" class="button"><i class="fa-regular fa-bookmark"></i></a>
                 <img src="images/IMG_6346 2.jpg" alt="jacket">
                 <h3>BOXY JACKET</h3>
                 <p>$ 1660</p>
             </div>
 
             <div class="product">
+                <a href="#" class="button"><i class="fa-regular fa-bookmark"></i></a>
                 <img src="images/Untitled_Artwork 5.jpg" alt="jeans">
                 <h3>ZIP-JEANS</h3>
                 <p>$ 2150</p>
             </div>
 
             <div class="product">
+                <a href="#" class="button"><i class="fa-regular fa-bookmark"></i></a>
                 <img src="images/IMG_6346 2.jpg" alt="jacket">
                 <h3>BOXY JACKET</h3>
                 <p>$ 1660</p>
             </div>
 
             <div class="product">
+                <a href="#" class="button"><i class="fa-regular fa-bookmark"></i></a>
                 <img src="images/Untitled_Artwork 5.jpg" alt="jeans">
                 <h3>ZIP-JEANS</h3>
                 <p>$ 2150</p>
             </div>
 
             <div class="product">
+                <a href="#" class="button"><i class="fa-regular fa-bookmark"></i></a>
                 <img src="images/IMG_6346 2.jpg" alt="jacket">
                 <h3>BOXY JACKET</h3>
                 <p>$ 1660</p>
             </div>
 
             <div class="product">
-                <img src="images/Untitled_Artwork 5.jpg" alt="jeans">
-                <h3>ZIP-JEANS</h3>
-                <p>$ 2150</p>
-            </div>
-
-            <div class="product">
-                <img src="images/IMG_6346 2.jpg" alt="jacket">
-                <h3>BOXY JACKET</h3>
-                <p>$ 1660</p>
-            </div>
-
-            <div class="product">
+                <a href="#" class="button"><i class="fa-regular fa-bookmark"></i></a>
                 <img src="images/Untitled_Artwork 5.jpg" alt="jeans">
                 <h3>ZIP-JEANS</h3>
                 <p>$ 2150</p>
