--- a/personal/code-skeleton/index.html
+++ b/personal/code-skeleton/index.html
@@ -85,7 +85,7 @@
                 }
             });
 
-             // Optional: close button inside search section
+             // close button inside search section
             const closeSearch = document.querySelector('.close-search'); // your close button inside search section
 
             if (closeSearch) { // check if element exists
