--- a/personal/personal-website/index.html
+++ b/personal/personal-website/index.html
@@ -38,7 +38,9 @@
                 <a href="#" class="button"><i class="fa-regular fa-magnifying-glass"></i></a>
             </div>
 
-            <h2>Caractère</h2>
+            <div class="logo">
+                <h2>Caractère</h2>
+            </div>
 
             <div class="nav-right">
                 <a href="#" class="button"><i class="fa-regular fa-bookmark"></i></a>
